<resources>
    <string name="app_name">mySegmentDefault</string>
    <string name="bottom_navigator_behavior">com.micro.mysegmentdefault.view.behavior.ByeBurgerBottomBehavior</string>
    <string name="toutiao">头条</string>
    <string name="blogs">专栏</string>
    <string name="questions">问答</string>
    <string name="discover">发现</string>
    <string name="mine">我的</string>
    <string name="state_network_error">网络错误,点击重新加载</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败,点击重新加载</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="data_request_error">网络异常</string>
    <string name="has_followed">取消关注</string>
    <string name="has_not_followed">关注标签</string>
    <string name="tag_follow_error">标签关注失败，请重试</string>
    <string name="tag_not_follow_error">标签取消关注失败，请重试</string>
    <string name="str_code_note">代码笔记</string>
    <string name="str_code_tech">技术圈</string>
    <string name="str_new_news">最新动态</string>
    <string name="str_rank">用户排行榜</string>
    <string name="str_login_register">登录/注册</string>
    <string name="str_min_message">我的消息</string>
    <string name="str_min_secret">我的私信</string>
    <string name="str_min_attention">我的关注</string>
    <string name="str_min_collection">我的收藏</string>
    <string name="str_min_setting">设置</string>
    <string name="str_user_personal_website">个人网站</string>
    <string name="str_user_no_website">暂无个人主页</string>
    <string name="str_user_personal_introduce">简介</string>
    <string name="str_user_no_introduce">暂无个人简介</string>
    <string name="str_user_question">TA的问题</string>
    <string name="str_user_answer">TA的回答</string>
    <string name="str_user_article">TA的文章</string>
    <string name="str_user_share">TA的分享</string>
    <string name="str_user_collection">TA的收藏</string>
    <string name="str_active_tags">活跃标签</string>
    <string name="str_user_location">所在城市</string>
    <string name="str_user_no_msg_record">无</string>
    <string name="str_user_edu">学历</string>
    <string name="str_user_job">工作</string>
    <string name="str_user_skill">擅长技能</string>
    <string name="str_user_project"><![CDATA[项目&著作]]></string>
    <string name="str_no_user_project"><![CDATA[暂无项目&著作]]></string>
    <string name="str_user_study">学习经历</string>
    <string name="str_no_user_study">暂无学习经历</string>
    <string name="str_user_work">工作经历</string>
    <string name="str_no_user_work">暂无工作经历</string>
    <string name="str_user_social">社交网络</string>
    <string name="str_zero">0</string>
    <string name="str_operation_error">操作失败，请稍后重试</string>
    <string name="str_private">私密</string>
    <string name="str_collection">收藏夹</string>
    <string name="str_commit">提交</string>
    <string name="str_operation_success">操作成功</string>
    <string name="add_collection">添加收藏夹</string>
    <string name="user_collection_name">收藏夹名称</string>
    <string name="str_collection_desc">收藏夹简介</string>
    <string name="str_collection_private">设为私密</string>
    <string name="str_create_collection">创建文件夹</string>
    <string name="str_comment">评论</string>
    <string name="str_article">文章</string>
    <string name="str_like">赞</string>
    <string name="str_collect">收藏</string>
    <string name="str_attention">关注</string>
    <string name="str_question">问题</string>
    <string name="str_activity">活动</string>
    <string name="str_hot_note">热门笔记</string>
    <string name="str_note">笔记</string>
    <string name="str_create_branch">建分支</string>
    <string name="str_note_content">添加笔记内容</string>
    <string name="str_title_not_allow_null">标题不允许为空</string>
    <string name="str_content_not_allow_null">内容不允许为空</string>
    <string name="str_note_publish_success">发布成功</string>
    <string name="str_tweet">动态</string>
    <string name="str_user_list">用户排行</string>
    <string name="str_user_info">个人详情</string>
    <string name="str_user_photo">头像</string>
    <string name="str_user_name">名字</string>
    <string name="str_user_sex">性别</string>
    <string name="str_user_website">个人网站</string>
    <string name="str_user_intro">个人简介</string>
    <string name="str_user_city">所在城市</string>
    <string name="str_default_city">上海</string>
    <string name="str_add_project_and_article"><![CDATA[添加项目&著作]]></string>
    <string name="str_add_project_and_article_shorter"><![CDATA[添加项目&著作]]></string>
    <string name="str_add_skill">+添加擅长技能</string>
    <string name="str_add_study">+添加学习经历</string>
    <string name="str_add_work">+添加工作经历</string>
    <string name="str_choose_picture">选择一张图片</string>
    <string name="str_can_not_find_file">未找到相册！</string>
    <string name="str_temp_file_error">无法创建临时文件</string>
    <string name="sex_secret">保密</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="str_choose_sex">选择性别</string>
    <string name="str_living_place">现居地</string>
    <string name="str_all_city">所有城市</string>
    <string name="str_choose_tag">选择标签</string>
    <string name="str_tags">标签</string>
    <string name="str_manage_tags">标签管理</string>
    <string name="str_delete">删除</string>
    <string name="str_add_introduce">添加简介</string>
    <string name="str_add_school">添加学校</string>
    <string name="str_add_department">添加专业</string>
    <string name="str_add_company_name">添加公司名称</string>
    <string name="str_add_company_title">添加职位头衔</string>
    <string name="str_name_must">名字必须填写</string>
    <string name="str_confirm_to_delete">确认删除</string>
    <string name="str_sure">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_user_edit">用户修改</string>
    <string name="str_user_message">消息</string>
    <string name="str_private_event">私信</string>
    <string name="str_neglect_event">忽视全部</string>
    <string name="str_delete_success">删除成功</string>
    <string name="str_attention_person">关注的人</string>
    <string name="str_user_attention_category">专栏</string>
    <string name="str_user_attention_question">我关注的问题</string>
    <string name="str_share">分享</string>
    <string name="share_weibo">微博分享</string>
    <string name="share_weixin">微信分享</string>
    <string name="share_weixin_timeline">朋友圈分享</string>
    <string name="share_qq">QQ分享</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="report">举报</string>
    <string name="str_set_push_message">消息推送设置</string>
    <string name="str_set_username_pass">账号和密码</string>
    <string name="str_set_advice">反馈意见</string>
    <string name="str_current_version">当前版本</string>
    <string name="str_exit">退出登录</string>
    <string name="str_message_push_setting">消息推送设置</string>
    <string name="str_open_push_info">开启后将推送相应消息</string>
    <string name="str_null"/>
    <string name="str_push_attention_new_answer">我关注的问题有了新答案</string>
    <string name="str_push_someone_attention_me">有人关注我</string>
    <string name="str_push_someone_vote_me">有人给我投票</string>
    <string name="str_push_private_message">有人给我发私信</string>
    <string name="str_push_comment_me">有人评论我</string>
    <string name="str_push_mention_me">有人提到我</string>
    <string name="str_push_invite_answer_question">有人邀请我回答问题</string>
    <string name="str_disturb_mode">勿扰模式</string>
    <string name="id_model_intro">开启后22:00至10:00间将不会收到推送消息</string>
    <string name="str_email">Email</string>
    <string name="str_account_password">账号和密码</string>
    <string name="str_binding_phone">绑定手机</string>
    <string name="str_update_password">修改密码</string>
    <string name="str_third_platform_binding">第三方账号绑定</string>
    <string name="str_wechat">微信</string>
    <string name="str_webo">微博</string>
    <string name="str_qq">QQ</string>
    <string name="str_google">Google</string>
    <string name="str_github">Github</string>
    <string name="str_show_social_account">社交账号显示在个人页面</string>
    <string name="str_update_eamil">修改邮箱地址</string>
    <string name="str_send_email">发送激活邮件</string>
    <string name="str_email_should_not_null">邮箱不能为空</string>
    <string name="str_email_format_error">邮箱格式错误</string>
    <string name="str_i_know">知道了</string>
    <string name="str_email_has_sent">已发送激活邮件</string>
    <string name="str_email_sent_detail">我们已经%s发送了激活邮件，请到邮箱查看并激活</string>
    <string name="str_input_pass">输入当前密码</string>
    <string name="str_input_new_pass">请输入新密码</string>
    <string name="str_input_new_pass_again">请再次输入新密码</string>
    <string name="str_pass_twice_differ">两次输入密码不一致</string>
    <string name="str_update_password_error">改修密码失败，请稍后重试</string>
    <string name="str_update_password_success">改修密码成功</string>
    <string name="str_social_account_showing">社交账号显示</string>
    <string name="str_get_data_error">获取数据失败，请稍后重试</string>
    <string name="str_webo_tag">weibo</string>
    <string name="str_google_tag">google</string>
    <string name="str_github_tag">github</string>
    <string name="str_feed_back">反馈意见</string>
    <string name="str_feed">请吐槽</string>
    <string name="str_feed_success">吐槽成功！</string>
    <string name="str_sort">排序</string>
    <string name="str_add">添加</string>
    <string name="str_choose_toutiao_type">列表排列方式</string>
    <string name="str_toutiao">头条</string>
    <string name="str_toutiao_content">分享亮点、槽点、你的观点</string>
    <string name="str_channel">频道</string>
    <string name="str_link_title">链接标题</string>
    <string name="str_input_website">请输入网址</string>
    <string name="str_choose_channel">选择频道</string>
    <string name="str_input_link_title">请输入链接标题</string>
    <string name="str_input_channel">请选择频道</string>
    <string name="str_input_content">请写点槽点嘛</string>
    <string name="str_input_channel_success">吐槽成功</string>
    <string name="str_menu_write">撰写</string>
    <string name="str_search_hint">搜索问答、文章和人</string>
    <string name="str_history_record">历史记录</string>
    <string name="str_clear">清除</string>
    <string name="str_ask_question_title">如果提问，这是一门学问</string>
    <string name="str_ask_question_content">先使用搜索 ，或许能更快找到答案哦\n
 1.清楚、详细地描述问题\n
 2.简要准确地突出主旨标题\n
 3.贴上问题相关代码和报错信息等\n
 4.已经尝试过的解决方法\n
 当然，利用编辑器排版提高可读性，准确地添加问题相关标签，更会提高你的问题被回答的几率。 </string>
    <string name="str_ask_question_i_kown">知道了，开始提问</string>
    <string name="str_ask_question">提问题</string>
    <string name="str_ask_question_title_2">标题：一句话说请你遇到的开发问题</string>
    <string name="str_ask_question_title_tag">标签，如：php</string>
    <string name="str_ask_question_desc">添加问题描述</string>
    <string name="str_create_question">创建问题</string>
    <string name="possible_question_results">下列问题可能有你需要的答案</string>
    <string name="str_hint">标题</string>
    <string name="str_create_tag">创建标签</string>
    <string name="str_create_tag_desc">对新建标签的描述</string>
    <string name="str_desc">描述</string>
    <string name="str_tag_desc_should_not_null">对标签的描述不能为空</string>
    <string name="str_create_tag_success">创建标签成功</string>
    <string name="str_write_article">写文章</string>
    <string name="str_publish">发布</string>
    <string name="str_choose_special_column">请选择一个专栏</string>
    <string name="str_article_content">文章内容</string>
    <string name="str_create_new_column">创建新专栏</string>
    <string name="str_user_custom_website">自定义网址(https://segementfault.com/blog/你的后缀)</string>
    <string name="str_report_reason">举报理由</string>
    <string name="str_report_one">辣鸡信息、广告、招聘、推广等</string>
    <string name="str_report_two">违规法律规定、涉及敏感内容</string>
    <string name="str_report_three">不友善内容</string>
    <string name="str_report_four">内容质量过低</string>
    <string name="str_report_five">版权问题</string>
    <string name="str_report_other">其它，需要文字进行说明</string>
</resources>