<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_social_account_showing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.micro.mysegmentdefault.ui.setting.SocialAccountShowingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.micro.mysegmentdefault.view.widget.PublicHeadLayout
            app:pub_title="@string/str_social_account_showing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <com.micro.mysegmentdefault.view.widget.MessagePushItemLayout
        android:id="@+id/id_item_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:push_content="@string/str_webo"
        app:push_tag="@string/str_webo_tag"
        app:push_show_switch="true"/>


    <com.micro.mysegmentdefault.view.widget.MessagePushItemLayout
        android:id="@+id/id_item_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:push_content="@string/str_google"
        app:push_tag="@string/str_google_tag"
        app:push_show_switch="true"/>

    <com.micro.mysegmentdefault.view.widget.MessagePushItemLayout
        android:id="@+id/id_item_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:push_content="@string/str_github"
        app:push_tag="@string/str_github_tag"
        app:push_show_switch="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:background="@color/activity_bg_color"

        />


</LinearLayout>
