<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_create_special_cloumn"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.micro.mysegmentdefault.ui.write.CreateSpecialColumnActivity">

    <com.micro.mysegmentdefault.view.widget.PublicHeadLayout
        app:pub_title="@string/str_create_new_column"
        app:pub_tv_txt="@string/str_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_input_title"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_title"
            android:hint="@string/str_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_input_website"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_website"
            android:hint="@string/str_user_custom_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/id_et_detail"
        android:padding="12dp"
        android:hint="@string/str_desc"
        android:layout_width="match_parent"
        android:background="@null"
        android:gravity="left|top"
        android:layout_height="match_parent"/>

</LinearLayout>
